공통 버튼 작업중

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title></title>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="/src/assets/scss/common.scss"
+    />
   </head>
 
   <body>
