일반리스 견적서 문구 수정

--- a/src/assets/_dummyData/견적서asis/견적서HTML샘플(일반리스).html
+++ b/src/assets/_dummyData/견적서asis/견적서HTML샘플(일반리스).html
@@ -34,11 +34,11 @@
 							</tr>
 							<tr>
 								<td style="width: 50%; padding: 3px; text-align: right; border-bottom: 1px solid #d5e0e3; font-size: 10px; ">견적번호</td>
-								<td style="width: 50%; padding: 3px; text-align: right; border-bottom: 1px solid #d5e0e3; font-size: 10px;">A0000000000001</td>
+								<td style="width: 50%; padding: 3px; text-align: right; border-bottom: 1px solid #d5e0e3; font-size: 10px;">A12306199852000</td>
 							</tr>
 							<tr>
 								<td style="width: 50%; padding: 3px; text-align: right; border-bottom: 1px solid #d5e0e3; font-size: 10px; ">견적일자</td>
-								<td style="width: 50%; padding: 3px; text-align: right; border-bottom: 1px solid #d5e0e3; font-size: 10px;">2023-04-24</td>
+								<td style="width: 50%; padding: 3px; text-align: right; border-bottom: 1px solid #d5e0e3; font-size: 10px;">2023.06.22</td>
 							</tr>
 							<tr>
 								<td style="width: 50%; padding: 3px; text-align: right; border-bottom: 1px solid #d5e0e3; font-size: 10px; ">전화번호</td>
@@ -59,31 +59,31 @@
 		<tbody>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">리스물건</td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2;  font-size: 12px; text-align: right;" fno="M1"></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2;  font-size: 12px; text-align: right;" fno="M1">기타의료기기</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">이용금액</td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right;" ></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right;" >99,999,000 원</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">이용기간</td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right;"></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right;">24개월</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">상환금리</td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;"></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;">(최저) 00.0% ~ (최대) 00.0%</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; "><b>보증금</b></td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;" ></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;" >20%(2,000,000 원)</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; "><b>잔존가치</b></td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;" ></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;" >0%(0 원)</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center;  font-size: 12px; "><b>유예원금</b></td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;" ></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 12px; text-align: right;" >20%(2,000,000 원)</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; "><b>보증금처리</b></td>
@@ -91,11 +91,11 @@
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; color: #ed1753;">매회리스료</td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right; color: #ed1753;"><b>2,000,000원</b></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right; color: #ed1753;"><b>100,000,000 원</b></td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">총납입액</td>
-				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right;" ></td>
+				<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  font-size: 12px; text-align: right;" >100,000,000 원</td>
 			</tr>
 			<tr>
 				<td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">납입주기</td>
@@ -111,4 +111,7 @@
 </div>
 
 <div style="font-size: 8px;">※ 유의사항</div>
-<div style="font-size: 8px; margin-top:8px;">○ 본 견적은 고객님의 신용도 또는 금융환경에 따라 변경될 수 있으며, 리스(상담)신청 시 정확한 견적 확인이 가능합니다.</div>
+<div style="font-size: 8px; margin-top: 8px;">
+	ㅇ 본 견적은 고객님의 신용도 또는 금융환경에 따라 변경될 수 있으며, 리스(상담)신청 시 정확한 견적 확인이 가능합니다.<br />
+	ㅇ 견적은 최초 산출일로부터 2주간 유효하며, 이후 견적 재산출하여 진행 하셔야 합니다.
+</div>
