견적서 수정 작업 완료

--- a/src/assets/_dummyData/견적서asis/견적서HTML샘플(시승차_금융리스_전기차 있을 때).html
+++ b/src/assets/_dummyData/견적서asis/견적서HTML샘플(시승차_금융리스_전기차 있을 때).html
@@ -51,7 +51,52 @@
     </table>
 </td>
 <td style="width: 2%;"></td>
-<td style="width: 49%; vertical-align: top;"><table cellspacing="0" cellpadding="3" border="0" style="width: 100%; border-collapse: collapse; "><tbody><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">취득세</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">고객별도</td><td width="70%" style="text-align: right; font-size: 13px;">0 원</td></tr></tbody></table></td></tr><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">공채비용</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">고객별도</td><td width="70%" style="text-align: right; font-size: 13px;">0 원</td></tr></tbody></table></td></tr><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">부대비용</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">고객별도</td><td width="70%" style="text-align: right; font-size: 13px;">0 원</td></tr></tbody></table></td></tr><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">②등록비용 합계</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td style="text-align: right; font-size: 13px;"><b>0 원</b></td></tr></tbody></table></td></tr><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">③선수금</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td style="text-align: right; font-size: 13px;"><b>50,000,000 원</b></td></tr></tbody></table></td></tr><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; text-align: center; font-size: 13px; padding: 5px; background-color:#d2eaf1; ">취득원가(①+②-③)</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 13px; padding: 5px; text-align: right; color: #ed1753; background-color:#effbff; "><b>100,400,000 원</b></td></tr></tbody></table></td>
+<td style="width: 49%; vertical-align: top;"><table cellspacing="0" cellpadding="3" border="0" style="width: 100%; border-collapse: collapse; "><tbody><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">취득세</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">고객별도</td><td width="70%" style="text-align: right; font-size: 13px;">0 원</td></tr></tbody></table></td></tr><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">공채비용</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">고객별도</td><td width="70%" style="text-align: right; font-size: 13px;">0 원</td></tr></tbody></table></td></tr><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">부대비용</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">고객별도</td><td width="70%" style="text-align: right; font-size: 13px;">0 원</td></tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+    <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">②등록비용 합계</td>
+    <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">
+    <table cellspacing="0" cellpadding="0" border="0" width="98%">
+        <tbody>
+            <tr>
+                <td style="text-align: right; font-size: 13px;"><b>0 원</b></td>
+            </tr>
+        </tbody>
+    </table>
+</td>
+</tr>
+<tr>
+    <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">③선수금</td>
+    <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">
+        <table cellspacing="0" cellpadding="0" border="0" width="98%">
+    <tbody>
+        <tr>
+            <td style="text-align: right; font-size: 13px;"><b>50,000,000 원</b>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</td>
+</tr>
+<tr>
+    <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">④보조금</td>
+    <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  background-color:#effbff; text-align: center; font-size: 13px; padding: 4px; ">
+        <table cellspacing="0" cellpadding="0" border="0" width="98%">
+    <tbody>
+        <tr>
+            <td style="text-align: right; font-size: 13px;"><b>0 원</b>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</td>
+</tr>
+<tr>
+    <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; text-align: center; font-size: 13px; padding: 5px; background-color:#d2eaf1; ">취득원가(①+②-③-④)</td>
+                <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 13px; padding: 5px; text-align: right; color: #ed1753; background-color:#effbff; "><b>100,400,000 원</b></td></tr></tbody></table></td>
 </tr>
 </tbody></table>
 <div><table cellspacing="0" cellpadding="0" border="0" width="100%"><tbody><tr><td>
@@ -69,10 +114,81 @@
 <td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">②자동차세</td><td width="70%;" fno="V1" style="text-align: right; font-size: 13px; ">고객별도</td></tr></tbody></table></td></tr><tr><td style="width: 49%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 13px; "><b>납입 리스료</b><span class="maxTermTxt"> (최저~최고)</span></td>
 <td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; background-color:#effbff; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">①+②</td><td width="70%;" fno="G1" style="text-align: right; text-align: right; font-size: 13px; color: #ed1753; " class="changePmtGrand"><b>3,077,200 ~ 3,141,600</b></td></tr></tbody></table></td></tr>
 </tbody></table><div id="changeNotice002" style="font-size: 12px; color: #ed1753; ">※ 금리체계 모범규준에 의거 신용조회 및 심사 후 금리가 결정되며, 결정된 금리에 따라 월 납입금이 변동됩니다.</div>
-<table cellspacing="0" cellpadding="0" border="0" width="100%" height="10px"><tbody><tr><td></td></tr></tbody></table><table cellspacing="0" cellpadding="3" border="0" style="width: 100%; border-collapse: collapse; "><tbody><tr><td style="width: 49%; border-top: 1px solid #178eb2;  border-right: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">등록/부대비용</td>
-<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; border-top: 1px solid #178eb2;  "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; "></td><td width="70%;" style="text-align: right; font-size: 13px; ">0</td></tr></tbody></table></td></tr><tr><td style="width: 49%; border-top: 1px solid #d5e0e3;  border-right: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">선수금</td>
-<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="30%" style="text-align: left; font-size: 12px; "></td><td width="70%;" style="text-align: right; font-size: 13px; ">50,000,000</td></tr></tbody></table></td></tr><tr><td style="width: 49%; border-top: 1px solid #178eb2;  border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; "><b>고객 초기납입 합계</b></td>
-<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; background-color:#effbff; "><table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td width="55%" style="text-align: left; font-size: 12px; "></td><td width="45%;" style="text-align: right; font-size: 13px; "><b>50,000,000</b></td></tr></tbody></table></td></tr>
+<table cellspacing="0" cellpadding="0" border="0" width="100%" height="10px">
+    <tbody>
+        <tr>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+<table cellspacing="0" cellpadding="3" border="0" style="width: 100%; border-collapse: collapse; ">
+    <tbody>
+        <tr>
+            <td style="width: 49%; border-top: 1px solid #178eb2;  border-right: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">등록/부대비용</td>
+<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; border-top: 1px solid #178eb2;  ">
+    <table cellspacing="0" cellpadding="0" border="0" width="98%">
+        <tbody><tr><td width="30%" style="text-align: left; font-size: 12px; ">
+        </td>
+        <td width="70%;" style="text-align: right; font-size: 13px; ">0</td>
+    </tr>
+    </tbody>
+</table>
+</td>
+</tr>
+<tr>
+    <td style="width: 49%; border-top: 1px solid #d5e0e3;  border-right: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">선수금</td>
+<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; ">
+    <table cellspacing="0" cellpadding="0" border="0" width="98%">
+        <tbody>
+            <tr>
+                <td width="30%" style="text-align: left; font-size: 12px; ">
+                </td>
+                <td width="70%;" style="text-align: right; font-size: 13px; ">50,000,000</td>
+            </tr>
+        </tbody>
+    </table>
+</td>
+            </tr>
+            <tr>
+                <td style="width: 49%; border-top: 1px solid #178eb2;  border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; ">
+                    <b>고객 초기납입 합계</b>
+                </td>
+<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; background-color:#effbff; ">
+    <table cellspacing="0" cellpadding="0" border="0" width="98%">
+    <tbody>
+        <tr>
+            <td width="55%" style="text-align: left; font-size: 12px; "></td><td width="45%;" style="text-align: right; font-size: 13px; ">
+                <b>50,000,000</b>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</td>
+</tr>
+<tr>
+    <td style="width: 49%; border-top: 1px solid #d5e0e3;  border-right: 1px solid #d5e0e3; padding: 4px; background-color:#effbff; text-align: center; font-size: 12px; ">선수금</td>
+<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; ">
+    <table cellspacing="0" cellpadding="0" border="0" width="98%">
+        <tbody>
+            <tr>
+                <td width="30%" style="text-align: left; font-size: 12px; "></td><td width="70%;" style="text-align: right; font-size: 13px; ">50,000,000</td></tr></tbody></table></td>
+            </tr>
+            <tr>
+                <td style="width: 49%; border-top: 1px solid #178eb2;  border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; ">
+                    <b>고객 초기납입 합계</b>
+                </td>
+<td style="width:51%; padding: 4px; text-align: center; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  text-align: center; background-color:#effbff; ">
+    <table cellspacing="0" cellpadding="0" border="0" width="98%">
+    <tbody>
+        <tr>
+            <td width="55%" style="text-align: left; font-size: 12px; "></td><td width="45%;" style="text-align: right; font-size: 13px; ">
+                <b>50,000,000</b>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</td>
+</tr>
 </tbody></table>
 <table cellspacing="0" cellpadding="0" border="0" width="100%" height="10px"><tbody><tr><td></td></tr></tbody></table>
 <table cellspacing="0" cellpadding="0" border="0" width="100%" height="20px"><tbody><tr><td style="text-align: left; font-size: 13px;  ">■ 구비서류</td></tr></tbody></table><table cellspacing="0" cellpadding="3" border="0" style="width: 100%; border-collapse: collapse; "><tbody><tr><td style="width: 16%; border-top: 1px solid #178eb2;  border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; ">개인/개인사업자</td><td style="width: 84%; text-align: left; padding: 4px;  text-align: left; font-size: 12px; border-top: 1px solid #178eb2; border-bottom: 1px solid #178eb2; ">사업자등록증 사본, 운전면허증 사본, 재직증명서, 원천징수영수증, 자동이체통장 사본<br>부가가치과세증명원, 소득금액증명원, 재산세과세증명원, 자격증 사본(전문직 한정)</td></tr><tr><td style="width: 16%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; padding: 4px; background-color:#d2eaf1; text-align: center; font-size: 12px; ">법인사업자</td><td style="width: 84%; border-bottom: 1px solid #178eb2; text-align: left; padding: 4px;  text-align: left; font-size: 12px;">사업자등록증 사본, 법인등기부등본 1부, 법인인감증명서 1통, 최근 2개년도 재무제표, 주주명부<br>자동이체통장 사본, 대표이사 신분증 사본, 대표이사 인감증명서 1통, 대표이사 재산세과세증명원</td></tr>
