--- a/src/assets/_dummyData/견적서asis/견적서HTML샘플(시승차_금융리스_전기차 있을 때).html
+++ b/src/assets/_dummyData/견적서asis/견적서HTML샘플(시승차_금융리스_전기차 있을 때).html
@@ -17,36 +17,58 @@
 <table cellspacing="0" cellpadding="0" border="0" width="100%"><tbody>
 <tr>
 <td style="width: 49%; vertical-align: top;">
-    <table cellspacing="0" cellpadding="3" border="0" style="width: 100%; border-collapse: collapse; "><tbody><tr><td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">기본가격</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; text-align: center; font-size: 13px; padding: 4px; ">
-        <table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td style="text-align: right; font-size: 13px;">150,400,000 원</td></tr>
-        </tbody>
-        </table>
-    </td>
-</tr>
-        <tr>
-            <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">옵션가격</td>
-            <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; ">
-                <table cellspacing="0" cellpadding="0" border="0" width="98%">
-                <tbody>
-                    <tr><td style="text-align: right; font-size: 13px;">0 원</td></tr>
-                </tbody>
-            </table>
-        </td>
-    </tr>
-        <tr>
-            <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">할인가격</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; ">
-                <table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td style="text-align: right; font-size: 13px;">0 원</td></tr></tbody></table>
-        </td>
-    </tr>
-</tr>
-<tr>
-    <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">탁송료</td><td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; ">
-        <table cellspacing="0" cellpadding="0" border="0" width="98%"><tbody><tr><td style="text-align: right; font-size: 13px;">0 원</td></tr></tbody></table>
-</td>
-</tr>
-        <tr>
-            <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; text-align: center; font-size: 13px; padding: 5px; background-color:#d2eaf1; ">①최종 차량가</td>
-            <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 13px; padding: 5px; text-align: right; color: #ed1753; background-color:#effbff; "><b>150,400,000 원</b></td></tr>
+    <table cellspacing="0" cellpadding="3" border="0" style="width: 100%; border-collapse: collapse; ">
+        <tbody>
+            <tr>
+                <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">기본가격</td>
+                <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; border-top: 2px solid #178eb2; text-align: center; font-size: 13px; padding: 4px; ">
+                  <table cellspacing="0" cellpadding="0" border="0" width="98%">
+                    <tbody>
+                      <tr>
+                        <td style="text-align: right; font-size: 13px;">150,400,000 원</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+            </tr>
+            <tr>
+                <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">옵션가격</td>
+                <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; ">
+                  <table cellspacing="0" cellpadding="0" border="0" width="98%">
+                    <tbody>
+                      <tr><td style="text-align: right; font-size: 13px;">0 원</td></tr>
+                    </tbody>
+                  </table>
+                 </td>
+            </tr>
+            <tr>
+                <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">할인가격</td>
+                <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; ">
+                   <table cellspacing="0" cellpadding="0" border="0" width="98%">
+                      <tbody>
+                         <tr>
+                            <td style="text-align: right; font-size: 13px;">0 원</td>
+                         </tr>
+                      </tbody>
+                   </table>
+              </td>
+            </tr>
+            <tr>
+               <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3; background-color:#effbff;  text-align: center; font-size: 13px; padding: 4px; ">탁송료</td>
+               <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #d5e0e3;  text-align: center; font-size: 13px; padding: 4px; ">
+                  <table cellspacing="0" cellpadding="0" border="0" width="98%">
+                    <tbody>
+                       <tr>
+                          <td style="text-align: right; font-size: 13px;">0 원</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+            </tr>
+            <tr>
+                <td style="width:35%; border-right: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2; text-align: center; font-size: 13px; padding: 5px; background-color:#d2eaf1; ">①최종 차량가</td>
+                <td style="width:65%; border-left: 1px solid #d5e0e3; border-bottom: 1px solid #178eb2;  font-size: 13px; padding: 5px; text-align: right; color: #ed1753; background-color:#effbff; "><b>150,400,000 원</b></td>
+           </tr>
         </tbody>
     </table>
 </td>
