--- a/src/assets/_dummyData/견적서asis/견적서HTML샘플(일반리스).html
+++ b/src/assets/_dummyData/견적서asis/견적서HTML샘플(일반리스).html
@@ -24,7 +24,7 @@
 		<tbody>
 			<tr>
 				<td style="text-align: left; width: 40%;">
-					<img class="ePhoto" style="width: 80%;" src="/resources/new_mb/images/common/img_no_car.png" onerror="this.src='/resources/new_mb/images/common/img_no_car.png'"> 
+					<img class="ePhoto" style="display: block; width: 80%;" src="/images/estimate/img-estimate-medical.png" onerror="this.src='/resources/new_mb/images/common/img_no_car.png'">
 				</td> 
 				<td style="text-align: left; width: 60%;">
 					<table cellspacing="0" cellpadding="2" border="0" width="100%">
