수정사항 반영

--- a/src/assets/_dummyData/견적서asis/견적서HTML샘플(일반리스).html
+++ b/src/assets/_dummyData/견적서asis/견적서HTML샘플(일반리스).html
@@ -4,7 +4,7 @@
 			<tr>
 				<td style="width: 25%; text-align: center; "></td>
 				<td style="width: 50%; text-align:center; padding: 2px; "><b class="eTitle ttl" style="font-size: 16px; line-height: 180%;">일반리스 견적서</b></td>
-				<td style="width: 25%; text-align: right; "><img style="width: 100%; max-width: 200px;" src="/resources/new_mb/images/common/img_logo_text.png"></td>
+				<td style="width: 25%; text-align: right; "><img style="display: block; width: 100%; max-width: 200px; margin-left: auto;" src="/images/estimate/img-estimate-logo.png"></td>
 			</tr>
 			<tr>
 				<td colspan="3" style="width: 100%; text-align:right;  padding: 2px; font-size: 10px; height: 10px;"></td>
