--- a/public/legacy/html/clause-detail.html
+++ b/public/legacy/html/clause-detail.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>약관 상세 - 하나캐피탈 공식 웹사이트</title>
 
