--- a/src/assets/_dummyData/견적서asis/견적서HTML샘플(시승차_금융리스_전기차 있을 때).html
+++ b/src/assets/_dummyData/견적서asis/견적서HTML샘플(시승차_금융리스_전기차 있을 때).html
@@ -96,8 +96,8 @@
         <table cellspacing="0" cellpadding="0" border="0" width="98%">
     <tbody>
         <tr>
-            <td style="text-align: right; font-size: 13px;"><b>50,000,000 원</b>
-            </td>
+            <td style="font-size: 13px; width: 40px;">0.00%</td>
+            <td style="text-align: right; font-size: 13px;"><b>50,000,000 원</b></td>
         </tr>
     </tbody>
 </table>
